# Ritual_internship_project_modified

./: README.md
internship/code/: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-run.sh  functional_spec.md  package-lock.json  package.json  pyproject.toml  pyvenv.cfg  requirements.txt  sample.env  tailwind.config.ts  tsconfig.json
internship/code/frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
internship/code/langchain-ritual-toolkit/: README.md  pyproject.toml  setup.py
internship/code/langchain-ritual-toolkit/examples/: main.py  ritual_config.json
internship/code/langchain-ritual-toolkit/langchain_ritual_toolkit/: __init__.py  api.py  configuration.py  mock.py  prompts.py  tool.py  toolkit.py  tools.py
internship/code/src/: __init__.py  blockchain.py  main.py
internship/code/src/services/: staking.ts
internship/code/src/staking_optimizer/: blockchain.py  main.py  types.py
internship/code/tests/: README.md  __init__.py  conftest.py  debug_chat_openai.py  debug_conversation.py  debug_openai.py  test_main.py
internship/code/tests/agent/: __init__.py  test_base.py  test_character.py  test_tools.py
internship/code/tests/api/: test_chat.py  test_chat_integration.py
internship/code/tests/autocompound/: test_monitor.py  test_optimizer.py  test_strategy.py
internship/code/tests/blockchain/: test_mock_contract.py  test_mock_state.py  test_mock_transaction.py
internship/code/tests/character/: __init__.py  test_conversation.py  test_response_formatter.py
internship/code/tests/mocks/: agent.py
(+98 files in other folders)
